Add photo credit styling and SoundCloud embed support

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
       height: 100%;
       border: none;
     }
+
+    .photo-credit {
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
+      font-size: 16px;
+    }
   </style>
   <link href="big.css" rel="stylesheet" type="text/css" />
   <link href="themes/brutalist-2.css" rel="stylesheet" type="text/css" />
@@ -253,7 +260,7 @@
       left to right) performing at Ft. Mason, San Francisco 1981.
       <br />
     </div>
-    <em> photo: Peter Abramowitsch </em>
+    <em class="photo-credit">photo: Peter Abramowitsch</em>
 
     <notes>A precursor to this concept of distributed control of a composition can
       be found in the early computer networked music groups The League of
@@ -266,7 +273,8 @@
     <img src="./images/amoreperfectunion/sims-galapagos.jpg" alt="an image of Karl Sims' Galapagos installation" />
 
     <div>Karl Sims' Galapagos (1997)</div>
-    <em class="nowrap">photo: OHTAKA Takashi</em>
+
+    <em class="photo-credit">photo: Ohtaka Takashi</em>
     <notes>
       Another important conceptual precursor to the work is Karl Sims' 1997
       installation Galapagos. Sims' work consisted of several video screens,
@@ -395,8 +403,8 @@
     <img src="images/mesh-garden/Guitar-GH3-hammeron.0.webp" alt="" />
     <div>Guitar Hero</div>
     <div class="credit">
-      <em> Photo: </em>
-      <a href="https://polygon.com">polygon.com</a>
+      <em class="photo-credit"> Photo: <a href="https://polygon.com">polygon.com</a></em>
+
     </div>
     <notes>
       You may think that this sounds similar to games like Guitar Hero but
@@ -411,9 +419,9 @@
     <div>
       <div style="font-size: 1.5em">Instant City (2003-2006)</div>
       <div class="credit">
-        <em>Photo:</em>
-        <a
-          href="http://www.hauert-reichmuth.ch/en/projekte/instant-city/">http://www.hauert-reichmuth.ch/en/projekte/instant-city/</a>
+        <em class="photo-credit">Photo: <a
+            href="http://www.hauert-reichmuth.ch/en/projekte/instant-city/">http://www.hauert-reichmuth.ch/en/projekte/instant-city/</a></em>
+
       </div>
     </div>
     <notes>Many music games exist that fulfill all or part of Studley's definition
@@ -435,28 +443,29 @@
         reacTable - Music Technology Group - Universitat Pompeu Fabra in
         Barcelona, Spain
       </div>
-      <div><em>Photo: Daniel Williams</em></div>
-      <notes>
-        The reacTable[7] is another inspiration for Mesh Garden. It is an
-        instrument with a tabletop user interface that allows players to create
-        music by moving physical objects on top of a screen to manipulate
-        musical parameters. Again, the non- portability of the table interface
-        renders this inaccessible to a large group of people. The intention with
-        Mesh Garden is to create something similar to these pieces, but using
-        the all-pervasive and accessible smartphone.
-      </notes>
-    </div>
-    <div>
-      <div>Interactions</div>
+      <div><em class=" photo-credit">Photo: Daniel Williams</em>
+  </div>
+  <notes>
+    The reacTable[7] is another inspiration for Mesh Garden. It is an
+    instrument with a tabletop user interface that allows players to create
+    music by moving physical objects on top of a screen to manipulate
+    musical parameters. Again, the non- portability of the table interface
+    renders this inaccessible to a large group of people. The intention with
+    Mesh Garden is to create something similar to these pieces, but using
+    the all-pervasive and accessible smartphone.
+  </notes>
+  </div>
+  <div>
+    <div>Interactions</div>
 
-      <notes>
-        The interactions of Mesh Garden are designed to be intuitive for a
-        non-musically trained player to use. Using the smartphone's compass, the
-        piece allows the player to interact with the sounds. A player interacts
-        by turning their phone, which affects two different parts of the work.
-      </notes>
-    </div>
-    <div class=" layout" style="grid-template-rows: 75% 25%">
+    <notes>
+      The interactions of Mesh Garden are designed to be intuitive for a
+      non-musically trained player to use. Using the smartphone's compass, the
+      piece allows the player to interact with the sounds. A player interacts
+      by turning their phone, which affects two different parts of the work.
+    </notes>
+  </div>
+  <div class=" layout" style="grid-template-rows: 75% 25%">
     <img src="images/mesh-garden/mesh garden player interaction.jpg" alt="" />
     <div>Relative axis compass interaction</div>
     <notes>
@@ -867,11 +876,6 @@
     style="display: grid; grid-template-rows: repeat(4, minmax(0, 1fr)); grid-template-columns: repeat(6, 1fr); gap: 10px; height: 100vh;">
     <!-- Dominant visual element -->
     <div style="grid-row: 1 / 4; grid-column: 1 / 4;"><span class="underline">Veins of</span></div>
-
-    <!-- Supporting elements creating rhythm
-    <div style="grid-row: 1 / 2; grid-column: 4 / 7;">
-      <audio src="images/veins-recording.wav" controls></audio>
-    </div> -->
     <div style="grid-row: 2 / 3; grid-column: 1 / 4;"><span class="underline">the Earth</span></div>
 
     <!-- Information block -->
@@ -880,6 +884,13 @@
     <!-- Footer information -->
     <div style="grid-row: 4 / 5; grid-column: 4/7;">Media</div>
     <div style="grid-row: 4 / 5; grid-column: 1;"><span class="year">2024</span></div>
+
+    <!-- Soundcloud Player -->
+    <div class="soundcloud-embed" style="grid-row: 1 / 3; grid-column: 4 / 7; align-self: center;">
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1833817539&color=%233c7494&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true">
+      </iframe>
+    </div>
     <notes>
       The work I composed for this concert was
       a
@@ -890,18 +901,6 @@
       and
       Design students and faculty and promote engagement with the app.
     </notes>
-  </div>
-
-  <div>
-    <iframe width="100%" height="166" class="responsive-iframe azyload" scrolling="no" frameborder="no" allow="autoplay"
-      src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1833817539&color=%233c7494&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
-    <div
-      style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-      <a href="https://soundcloud.com/tate-carson-1" title="Tate Carson 1" target="_blank"
-        style="color: #cccccc; text-decoration: none;">Tate Carson 1</a> · <a
-        href="https://soundcloud.com/tate-carson-1/veins-of-the-earth-stereo" title="Veins Of The Earth - Stereo"
-        target="_blank" style="color: #cccccc; text-decoration: none;">Veins Of The Earth - Stereo</a>
-    </div>
   </div>
 
 
