Refactor layout structure and enhance styling for various sections

--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
     </notes>
   </div>
 
-  <div>
+  <div class="layout" style="grid-template-rows: 75% 25%">
     <img src="images/mesh-garden/Guitar-GH3-hammeron.0.webp" alt="" />
     <div>Guitar Hero</div>
     <div class="credit">
@@ -429,8 +429,8 @@
   </div>
   <div class="layout" style="grid-template-rows: 75% 25%">
     <img src="images/mesh-garden/instantcity_play.jpg" alt="" />
+    <div style="font-size: 1.5em">Instant City (2003-2006)</div>
     <div>
-      <div style="font-size: 1.5em">Instant City (2003-2006)</div>
       <div class="credit">
         <em class="photo-credit">Photo: <a
             href="http://www.hauert-reichmuth.ch/en/projekte/instant-city/">http://www.hauert-reichmuth.ch/en/projekte/instant-city/</a></em>
@@ -449,12 +449,11 @@
     </notes>
   </div>
 
-  <div>
+  <div class="layout" style="grid-template-rows: 75% 25%">
     <img src="images/mesh-garden/Reactable_Multitouch.jpg" width="1000px""
       alt="" />
       <div>
-        reacTable - Music Technology Group - Universitat Pompeu Fabra in
-        Barcelona, Spain
+        reacTable
       </div>
       <div><em class=" photo-credit">Photo: Daniel Williams</em>
   </div>
@@ -468,7 +467,7 @@
     the all-pervasive and accessible smartphone.
   </notes>
   </div>
-  <div>
+  <!-- <div>
     <div>Interactions</div>
 
     <notes>
@@ -477,7 +476,7 @@
       piece allows the player to interact with the sounds. A player interacts
       by turning their phone, which affects two different parts of the work.
     </notes>
-  </div>
+  </div> -->
   <!-- <div class=" layout" style="grid-template-rows: 75% 25%">
     <img src="images/mesh-garden/mesh garden player interaction.jpg" alt="" />
     <div>Relative axis compass interaction</div>
@@ -552,15 +551,20 @@
       distributed sequencer that works even with devices on separate networks.
     </notes>
   </div> -->
-  <div>
-    <div>What did I learn?</div>
-    <div>
+  <div class="layout" style="
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(6, 1fr);
+      ">
+    <div style="grid-area: 1 / 1 / 2 / 5; justify-content: center;">
+      <h1>Conclusions</h1>
+    </div>
+    <div style="grid-area: 2 / 1 / 5 / 5;">
       <ul>
         <li>Synchronization is difficult but useful</li>
         <li>Game dynamics open possibilities for participation</li>
         <li>
-          Creating an avenue for players with greater music skill levels will
-          take more advances in user interface design
+          More advanced interfaces needed for skilled musicians.
         </li>
       </ul>
     </div>
@@ -627,7 +631,7 @@
 
   <div>
     A goal of Sounds Aware is to shift attention to geophonic and biophonic
-    soundscape away from the anthrophonony.
+    soundscapes, away from the anthrophonony.
 
     <notes>
       The goal of Sounds Aware is to bring the user’s awareness to the
@@ -647,9 +651,16 @@
       Cleaning: Notes for an Experimental Music Course [13].
     </notes>
   </div>
-  <div>
-    <div>Noise Pollution</div>
-    <div>
+
+  <div class="layout" style="
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(6, 1fr);
+      ">
+    <div style="grid-area: 1 / 1 / 2 / 5; justify-content: center;">
+      <h1>Noise Pollution</h1>
+    </div>
+    <div style="grid-area: 2 / 1 / 5 / 5;">
       <ul>
         <li>
           There is overwhelming evidence that exposure to environmental noise
@@ -678,6 +689,7 @@
       with a mobile phone.
     </notes>
   </div>
+
 
   <!-- immaterial.cloud -->
   <div class="layout"
@@ -723,7 +735,7 @@
 
   <div class="layout" style="grid-template-rows: 75% 25%">
     <img src="images/immaterialcloud2.png" alt="immaterial.cloud" />
-    <div>Visualizations of participants interacting with the work</div>
+    <div>Participants interacting with the work</div>
     <notes>
       immaterial.cloud creates the opportunity for a shared space with
       participants by using technology in a collective way. It requires the
@@ -743,14 +755,22 @@
       participants.
     </notes>
   </div>
-  <div>
-    <div>Technical Description</div>
-    <ul>
-      <li>Peer-to-peer networking</li>
-      <li>WebRTC</li>
-      <li>IPFS</li>
-      <li>Motion tracking</li>
-    </ul>
+  <div class="layout" style="
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(6, 1fr);
+      ">
+    <div style="grid-area: 1 / 1 / 2 / 5; justify-content: center;">
+      <h1>Technical Description</h1>
+    </div>
+    <div style="grid-area: 2 / 1 / 5 / 5;">
+      <ul>
+        <li>Peer-to-peer networking</li>
+        <li>WebRTC</li>
+        <li>IPFS</li>
+        <li>Motion tracking</li>
+      </ul>
+    </div>
     <notes>
       [immaterial.cloud](http://immaterial.cloud) is a web application that
       uses peer-to-peer technologies to send data between phones without the
@@ -765,6 +785,7 @@
       front of one specific phone it will have a predictable outcome.
     </notes>
   </div>
+
   <div class="layout" style="grid-template-rows: 75% 25%">
     <img src="images/immaterialcloud/qi5jxtMLvuyjoAfMFJ6onDzEUQptFfu8cggWfDfms3Q.png" alt="" />
     <a href="https://immaterial.cloud" target="blank">https://immaterial.cloud</a>
