Add new slides with student research and concert details, including images and notes

--- a/index.html
+++ b/index.html
@@ -894,6 +894,23 @@
   </div>
 
   <div class="layout" style="grid-template-rows: 75% 25%">
+    <img src="images/rl-screenshots/me-carter.png" alt="">
+
+    <div>Student Research</div>
+
+    <notes>
+      Resonant Landscapes was developed in collaboration with a student at Dakota State University. The project
+      provided
+      an opportunity to engage with cutting-edge technologies and explore the creative possibilities of
+      locative sound art. Through their research and experimentation, my student contributed to the development of the
+      app
+      and helped shape its features.
+    </notes>
+    <div class="slide-count"></div>
+
+  </div>
+
+  <div class="layout" style="grid-template-rows: 75% 25%">
     <img src="images/rl-screenshots/sd-state-parks.png">
     <div>South Dakota State Parks</div>
     <div class="slide-count"></div>
@@ -970,8 +987,60 @@
 
   </div>
 
+  <div class="layout">
+
+    <img src="images/rl-concert/landscape-poster.png" alt="" width="100%" height="500px">
+
+    <notes>
+      In addition to using the ambisonic recordings in the Resonant Landscapes app, DSU faculty and students composed
+      works
+      that premiered during a public concert at the Madison Area Arts Council.
+    </notes>
+    <div class="slide-count"></div>
+
+  </div>
+
   <div>
-    <img src="images/daniel.png" alt="">
+
+    <img src="images/rl-concert/me.png" alt="">
+
+    <notes>
+      In addition to using the ambisonic recordings in the Resonant Landscapes app, DSU faculty and students composed
+      works
+      that premiered during a public concert at the Madison Area Arts Council.
+    </notes>
+    <div class="slide-count"></div>
+
+  </div>
+
+  <div>
+    <img src="images/rl-concert/daniel.png" alt="">
+
+    <notes>
+      In addition to using the ambisonic recordings in the Resonant Landscapes app, DSU faculty and students composed
+      works
+      that premiered during a public concert at the Madison Area Arts Council.
+    </notes>
+    <div class="slide-count"></div>
+
+  </div>
+
+  <div>
+
+    <img src="images/rl-concert/kayla.png" alt="">
+
+    <notes>
+      In addition to using the ambisonic recordings in the Resonant Landscapes app, DSU faculty and students composed
+      works
+      that premiered during a public concert at the Madison Area Arts Council.
+    </notes>
+    <div class="slide-count"></div>
+
+  </div>
+
+  <div>
+
+    <img src="images/rl-concert/jacob.png" alt="">
 
     <notes>
       In addition to using the ambisonic recordings in the Resonant Landscapes app, DSU faculty and students composed
